--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "link": "npm link my-components",
+    "unlink": "npm unlink my-components"
   },
   "dependencies": {
     "naive-ui": "^2.41.0",
