--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "unlink": "npm unlink my-components"
   },
   "dependencies": {
+    "my-components": "github:Maxiaochuan123/my-components#main",
     "naive-ui": "^2.41.0",
     "vue": "^3.5.13"
   },
