--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "link": "npm link my-components",
-    "unlink": "npm unlink my-components"
+    "unlink": "npm unlink my-components",
+    "file": "npm install file:../my-components/dist",
+    "gitUrlBranch": "npm install git+https://github.com/Maxiaochuan123/my-components.git#main",
+    "gitUrlTag": "npm install git+https://github.com/Maxiaochuan123/my-components.git#v1.0.0"
   },
   "dependencies": {
-    "my-components": "github:Maxiaochuan123/my-components#main",
+    "my-components": "github:Maxiaochuan123/my-components#v1.0.0",
     "naive-ui": "^2.41.0",
     "vue": "^3.5.13"
   },
